--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br" data-theme="dark" > 
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/jpg" href="/src/assets/icon-chronos.jpg" />
+    <link rel="icon" type="icon.svg" href="/public/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chronos</title>
   </head>
